# cpp---coding-projects

./: Pieces.h
revision/: readme.md
revision/liberary management system/: CMakeLists.txt  book.cpp  book.hpp  main.cpp
revision/static/: static_local_variable.cpp
tetris/: main.cpp  tst.cpp
