cmake_minimum_required(VERSION 3.0)

# Project name
project(LibraryManagementSystem)

# Find required libraries (optional)
# You might need to install development packages for specific libraries

# Add source files
add_executable(LibraryManagementSystem main.cpp book.cpp)

# Include header directory (optional)
# If your header file is in a separate directory, you need to specify the path
# include_directories(book_header_dir)
